@@ -1,16 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST l_cc_c_10.0.026_ia32.tar.gz 41278910 RMD160 7c2046d1c8bfbf98639c4cc1d77db0ccf5fd5637 SHA1 b44fdb3f91df847b03307b96256ea83252983432 SHA256 36258784fba6550a117b30e9bfd48d414d8986b95e802191be0b37005eedc0f6
 DIST l_cc_c_10.0.026_ia64.tar.gz 64662221 RMD160 51601383678f759979a2c9d456102e28a9d017bf SHA1 2f71ffe6fcb9d8a2bb8fe46bf82dc29382e5cdc5 SHA256 1d55e6040fef6c3e42725049c19ab80c506efff99b7810e04cc55731d0e31b19
 DIST l_cc_c_10.0.026_intel64.tar.gz 36405579 RMD160 bcf8bec436ad4c9e91b35201e709491b197f6145 SHA1 9a39aee94d2cd67476a4aad198657c1333854676 SHA256 00ca4de9510e04c7d3f27590e21339d663d17b12b39ebc5153d9bd58e750128e
-DIST l_cc_p_10.1.008_ia32.tar.gz 44733611 RMD160 04cac7c02ea27a4330458b1f08dcb1827081118b SHA1 37b5ca4932370b0f4d79338f284c345c88fdab0a SHA256 189e19c4c77e989308c071cf1cae214b0ae8659a4fc62c363328d33024bc56db
-DIST l_cc_p_10.1.008_ia64.tar.gz 68959550 RMD160 c83cb0c8e44f54e477b9b3dfa1ec50940379a7ac SHA1 8831d298832e84291c22c193d661b0650a3ec643 SHA256 54bf5c03e71b66a73be4cdf0fe6ccad74d92fd5da6d2318b71af5f415311be82
-DIST l_cc_p_10.1.008_intel64.tar.gz 40184785 RMD160 ea7d02db4c0de1bb8975bf8c9aa9ea408ff6fab7 SHA1 7cd39a98a0055b464f2f53f8f7ac315dee89053f SHA256 20576dd4376c26f371d19fa3e9cf8fec1ee0a72a8186da0c14ec87025af615f6
+DIST l_cc_p_10.1.012_ia32.tar.gz 50689069 RMD160 fe5bcb1b8e7e676825e121dceffdad190ca2c0c0 SHA1 788532461cc84df2ce86abacdd4d95fdd3c7a9d3 SHA256 d6c57312bc810eaefdeff3f3692dc1a7226ae7db830149f26380a62c977713ec
+DIST l_cc_p_10.1.012_ia64.tar.gz 72808124 RMD160 a9c1d25fcd49ff52dfa2f6fc8ad4989042604a68 SHA1 1b44e403d8c86391e434199d72332e8fbeb83ef0 SHA256 3e3fed8839e50d3d40578439c588e5d10c9e50198c562ff8530640b294e14a6e
+DIST l_cc_p_10.1.012_intel64.tar.gz 40202063 RMD160 74ca25db81ce8c7946c08690cfe0041f39f25448 SHA1 207fdca014e468e30d771d6b5d9c7f1f27945bd2 SHA256 006fc0ebb380b304768d7c53ef8a477e2a4db61db63ca7e9b8b1ba72c296a4cb
 DIST l_fc_c_10.0.026_ia32.tar.gz 40048235 RMD160 31272a3c579fca552de1991036fb221a188dc9d1 SHA1 36950866a7cc286b14d17be607e78d7f16b796b0 SHA256 bd080ae3fed4f37e9d854889ab55233c313833901342ca2bf2e3dd7db6683240
 DIST l_fc_c_10.0.026_ia64.tar.gz 67048117 RMD160 50ece4d17023a39d99522af2738a8a1885fef483 SHA1 b125c44feb513ff1223d051f40cf1e791a5369d3 SHA256 d9a5938681bacabb5fbc612f23b0870b1d74375735a357c2e943aa8da04330dc
 DIST l_fc_c_10.0.026_intel64.tar.gz 41346217 RMD160 207cdd1bc81357e3631c38c5609f37f73f585ab5 SHA1 686db50a774b82c85e02fa7767deddedc5b2520c SHA256 f2f306334ce47c6a778e1da21256a958aeb8d285740f35630567f9dc2a49e7f9
-DIST l_fc_p_10.1.008_ia32.tar.gz 40881667 RMD160 13233d075838d3a22a282632b77c5a6d3bf7673f SHA1 1c5240cd04344c022a581a8d865d8ccef579fc29 SHA256 09bd45b9f96dfbd9efffb52bad779593fed035dfef8d64feccc3bbf3c8b589a9
-DIST l_fc_p_10.1.008_ia64.tar.gz 68785027 RMD160 38a5f6bc622414ab637714ede01434b784ead4e9 SHA1 146457865925108ce697e194f39108ed522873d3 SHA256 fa1866dd4e4c4c4c1fe20c0012fd01ae4059d31c10c17f83c5c49eb7ee86d4dd
-DIST l_fc_p_10.1.008_intel64.tar.gz 42511560 RMD160 9bbb963d3df5ad2bdf13a1ec36a0be195960ca95 SHA1 b818a744c689d5fe35819b35add67e1fca3d22e3 SHA256 7744d0255f879de0cf39b73c0bae68f6b667f07f495571b5f7690525f75eec24
+DIST l_fc_p_10.1.012_ia32.tar.gz 43560258 RMD160 242c75ea8c620733c60a9efd8cafac314e0f1837 SHA1 ca3bf213a200ed78a48691c13576add10eb3654d SHA256 ff54bc43f4944763bb5cb4a622ba5db2976749cb13536b30d9544d6354155019
+DIST l_fc_p_10.1.012_ia64.tar.gz 69431142 RMD160 42cd70fd4b4caeeaad97540bc24c5da013cf2a1e SHA1 f9f262a47641c323941e6eedbee207e84464bd79 SHA256 3d2485b3a9c23215a6ab4d0bbbd2fff8f59b4fedd3c9b7281724f4e61c658e2c
+DIST l_fc_p_10.1.012_intel64.tar.gz 45109555 RMD160 2a700f41684c6f63efebe8281c549528826d053c SHA1 99eed67726723e5c6b03dd0d9f7694b5392b72b8 SHA256 94c25d6f5b1214e4dc8dbb069c146b62a38423f312b5b2a1ec4530327d75c251
 EBUILD idb-10.0.026.ebuild 2736 RMD160 03bd13d965894d6b9a89a54cc40c35cc3eb816e3 SHA1 ade1803910b49d19b11717cb3863add74e82dc25 SHA256 ce352677412c67292d01aaeb5e8d0f896ffc7cfc7d9f899f2b49a222750d498f
-EBUILD idb-10.1.008.ebuild 2741 RMD160 e90143227d53df0c069019db77622619a9b5f589 SHA1 e1682c4b6e0ccc40cbcdade8e4106f97d291e769 SHA256 2fa2c31495d4813524995a804414b236588e25a8f84c73662486e2666d4e142d
-MISC ChangeLog 1090 RMD160 aa2eb9d58b86a45ca575e9bcdb4935afffdd399b SHA1 d6f72b37859ff0ed021c5e42b57defcf54289927 SHA256 0ab37419510a40aeafbb55a447203bee11b32511ebddc5ccff8e5d0fea9a796d
-MISC metadata.xml 753 RMD160 976fee61889ef22c4a907ec2b29baf21e7de34f7 SHA1 7746e8d4d85ab80ad8e66fda3570dc71fb0291c7 SHA256 7779df38f8f62e90358efd30506e4896b7d8d0b36cb5fa677acc5878e85b0064
+EBUILD idb-10.1.012.ebuild 2683 RMD160 16887f9a342a7aeba02763457931cfde875bac44 SHA1 7f7470aedde830a1dbed5fb7888c533e0cceb47c SHA256 97331c4eca73f30a7c658d9b5bf763f602cebdf8a3db047b3228782cccb1a803
+MISC ChangeLog 1251 RMD160 03508ddc1fa9a66f1162ee3a49186dba7ee3ce25 SHA1 6d359748a439c4ceed647b024fbf24f3d3a80b59 SHA256 a48c9c08fca652183b2365a27d9f5f8999a44ce6f47dd774c1109fa042f3ccf8
+MISC metadata.xml 769 RMD160 e0213bd0ec069c7680c5eb5fec1c48d8215cb358 SHA1 0e122fa202d2328569e188e4bfe68d637bdf86d6 SHA256 abf59ceaa7de63559560f96e05e6e667ba5684432dc79aa92d5f162b18b41241
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHxpBV1ycZbhPLE2ARApRDAKCywdDYRbrvNMpDs1JHop+/0l2JQACbBzU9
+diPFmRJ7/SW/FZiXk14OnDw=
+=7oFO
+-----END PGP SIGNATURE-----
