@@ -6,14 +6,14 @@
 <email>bicatali@gentoo.org</email>
 </maintainer>
 <longdescription lang="en">
-The Intel® Debugger is a command line debugger for Intel based
-architectures. It is well suited with the Intel C++ or Intel FORTRAN
-compilers. It also comes also with a graphical interface and extensive
-documentation. The package is bundled in either compiler tar ball, and
-has been split to produce this one.
-The product can be installed as a non-commercial as
-well. License, terms of qualifications can be found on the web
-site and follow the one received in the Intel compilers.
+  The Intel® Debugger is a command line debugger for Intel based
+  architectures. It is well suited with the Intel C++ or Intel FORTRAN
+  compilers. It also comes also with a graphical interface and extensive
+  documentation. The package is bundled in either compiler tar ball, and
+  has been split to produce this one.
+  The product can be installed as a non-commercial as
+  well. License, terms of qualifications can be found on the web
+  site and follow the one received in the Intel compilers.
 </longdescription>
 </pkgmetadata>
 
