@@ -4,21 +4,17 @@ Hash: SHA1
 DIST l_fc_c_10.0.026_ia32.tar.gz 40048235 RMD160 31272a3c579fca552de1991036fb221a188dc9d1 SHA1 36950866a7cc286b14d17be607e78d7f16b796b0 SHA256 bd080ae3fed4f37e9d854889ab55233c313833901342ca2bf2e3dd7db6683240
 DIST l_fc_c_10.0.026_ia64.tar.gz 67048117 RMD160 50ece4d17023a39d99522af2738a8a1885fef483 SHA1 b125c44feb513ff1223d051f40cf1e791a5369d3 SHA256 d9a5938681bacabb5fbc612f23b0870b1d74375735a357c2e943aa8da04330dc
 DIST l_fc_c_10.0.026_intel64.tar.gz 41346217 RMD160 207cdd1bc81357e3631c38c5609f37f73f585ab5 SHA1 686db50a774b82c85e02fa7767deddedc5b2520c SHA256 f2f306334ce47c6a778e1da21256a958aeb8d285740f35630567f9dc2a49e7f9
-DIST l_fc_p_10.1.008_ia32.tar.gz 40881667 RMD160 13233d075838d3a22a282632b77c5a6d3bf7673f SHA1 1c5240cd04344c022a581a8d865d8ccef579fc29 SHA256 09bd45b9f96dfbd9efffb52bad779593fed035dfef8d64feccc3bbf3c8b589a9
-DIST l_fc_p_10.1.008_ia64.tar.gz 68785027 RMD160 38a5f6bc622414ab637714ede01434b784ead4e9 SHA1 146457865925108ce697e194f39108ed522873d3 SHA256 fa1866dd4e4c4c4c1fe20c0012fd01ae4059d31c10c17f83c5c49eb7ee86d4dd
-DIST l_fc_p_10.1.008_intel64.tar.gz 42511560 RMD160 9bbb963d3df5ad2bdf13a1ec36a0be195960ca95 SHA1 b818a744c689d5fe35819b35add67e1fca3d22e3 SHA256 7744d0255f879de0cf39b73c0bae68f6b667f07f495571b5f7690525f75eec24
 DIST l_fc_p_10.1.012_ia32.tar.gz 43560258 RMD160 242c75ea8c620733c60a9efd8cafac314e0f1837 SHA1 ca3bf213a200ed78a48691c13576add10eb3654d SHA256 ff54bc43f4944763bb5cb4a622ba5db2976749cb13536b30d9544d6354155019
 DIST l_fc_p_10.1.012_ia64.tar.gz 69431142 RMD160 42cd70fd4b4caeeaad97540bc24c5da013cf2a1e SHA1 f9f262a47641c323941e6eedbee207e84464bd79 SHA256 3d2485b3a9c23215a6ab4d0bbbd2fff8f59b4fedd3c9b7281724f4e61c658e2c
 DIST l_fc_p_10.1.012_intel64.tar.gz 45109555 RMD160 2a700f41684c6f63efebe8281c549528826d053c SHA1 99eed67726723e5c6b03dd0d9f7694b5392b72b8 SHA256 94c25d6f5b1214e4dc8dbb069c146b62a38423f312b5b2a1ec4530327d75c251
 EBUILD ifc-10.0.026-r1.ebuild 3118 RMD160 bf202fd7de4ccf5e850289537fb80bd4cf51fad9 SHA1 b754b1cb9d6b803ea751ec9aec87b3e59bd7bdaf SHA256 f0f5cc289fbe6f15dbb41e92b5b02ef2af70035c823738abb9f0e85831e76019
-EBUILD ifc-10.1.008.ebuild 3130 RMD160 d1a639c28652b2bae293448931f6f5f8cc283001 SHA1 949893f9de52a5b68401136d37ac1c2b813bec8e SHA256 26527b7f121ef0be32a5eb8a137f920991d42acedb5bcbe6ac02ecc1dc845ef1
 EBUILD ifc-10.1.012.ebuild 2630 RMD160 9ab0f50d16b643043f51d1a413836d5fc9d6d883 SHA1 a017b05004d23c71b366bbd40d84c5de2295f99c SHA256 f16c660f893c6ca805e67f927353f97942af77b367905ab1b8810af7ac00dbba
-MISC ChangeLog 4680 RMD160 b732ef2334e95bb95663b2c3aea3f653a06eade3 SHA1 778f97bd241f8d1ae116e08f2a7aa4d0c8a0181b SHA256 640d0e1c7e8e5495167debeb7e730280f50838a4a0fc24747e8c421106fb8b60
+MISC ChangeLog 4780 RMD160 d1a3611fb03a43b7c28b1b1650cd63ea95813119 SHA1 7b38c455b9f1104be588aaa0eb2dd90054b0247a SHA256 8ba8cd1c2850ca7ffe675571aaabf4e6f6c0fbf022eba7e23b13d27530311d26
 MISC metadata.xml 680 RMD160 0455d1b98558521f1f6af0288a2ddbbba7df5b85 SHA1 888ee8e9160eedc4609be8cd51935272743da63c SHA256 c9deee77916c4a7790645f26949259ee1fead430a087d41f9664df81b32460fe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHo2Tz1ycZbhPLE2ARAjTvAJ0WF9hXnprHEDidVzlnRX1589/ZJQCeObY6
-zQ+j8SVSItW7ZfvQK/KJSXA=
-=NjzR
+iD8DBQFHxpFS1ycZbhPLE2ARAreRAJ4qu2mStdZgQj3Enatoc0iA0w30uACgmNiM
+PznH18630IfI29D8Y3g+sZg=
+=0+qZ
 -----END PGP SIGNATURE-----
