@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/idb
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/idb/ChangeLog,v 1.7 2007/12/05 20:37:47 armin76 Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/idb/ChangeLog,v 1.8 2008/02/28 10:43:06 bicatali Exp $
+
+*idb-10.1.012 (28 Feb 2008)
+
+  28 Feb 2008; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
+  -idb-10.1.008.ebuild, +idb-10.1.012.ebuild:
+  Version bump
 
   05 Dec 2007; Raúl Porcel <armin76@gentoo.org> idb-10.0.026.ebuild,
   idb-10.1.008.ebuild:
